--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@
   margin-bottom: 1em;
 }
 
+a {
+  text-decoration: none;
+}
+
 .card {
   border-radius: 1em;
   text-align: center;
@@ -17,20 +21,22 @@
 }
 
 .card img {
-  border-radius: 50%;
-  width: 60%;
+  border-radius: 0%;
+  width: 100%;
   margin: auto;
 }
 
 .posts {
-  display: grid;
-  box-sizing: border-box;
-  justify-content: center;
-  margin: 5px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column-reverse;
+  align-items: center;
+  flex-grow: 1;
 }
 
 .posts_posts {
   padding: 5px;
+  justify-content: center;
 }
 
 #myBtn {
@@ -178,4 +184,43 @@ body {
   .footer__nav {
     flex: 2 0px;
   }
+}
+
+.preloader {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+  /* фоновый цвет */
+  background: #e0e0e0;
+  /* z-index: 1001; */
+}
+
+.preloader__image {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  width: 70px;
+  height: 70px;
+  margin-top: -35px;
+  margin-left: -35px;
+  text-align: center;
+  animation: preloader-rotate 2s infinite linear;
+}
+
+@keyframes preloader-rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.loaded_hiding .preloader {
+  transition: 0.3s opacity;
+  opacity: 0;
+}
+
+.loaded .preloader {
+  display: none;
 }
