--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,10 @@ a {
   padding: 1em;
 }
 
+.card-text {
+  height: 406px;
+}
+
 .card:hover {
   background-color: rgba(0, 0, 0, 0.1);
 }
@@ -24,6 +28,10 @@ a {
   border-radius: 0%;
   width: 100%;
   margin: auto;
+}
+
+.card-img-top {
+  align-items: center;
 }
 
 .posts {
