--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .rounded-img {
   width: 60%;
   border-radius: 50%;
@@ -6,8 +10,14 @@
   margin-bottom: 1em;
 }
 
-a {
+i > a {
   text-decoration: none;
+  font-family: "Courier New", Courier, monospace;
+}
+
+i {
+  text-decoration: none;
+  font-family: "Courier New", Courier, monospace;
 }
 
 .card {
@@ -129,7 +139,7 @@ body {
 }
 
 .footer__btn {
-  display: flex;
+  /* display: flex; */
   align-items: center;
   justify-content: center;
   height: 36px;
@@ -246,147 +256,150 @@ body {
 !
 SERVICES PAGE SERVICES PAGE SERVICES PAGE SERVICES PAGE SERVICES PAGE SERVICES PAGE */
 
-:root {
-  --gap: 4px;
-  --background-page: #111;
-  --background-container: #333;
-  --background-box: #222;
-  --color-line: #666;
-  --color-font: #444;
-  --columns: 3;
-  --border-radius: 3px;
-  --font-size: 18px;
-  --font-family: Arial;
-  --transition-duration: 600ms;
-  --transition-style: ease-in-out;
-  --container-max-width: 640px;
+/* SHINE: */
+
+.col-lg-6 figure {
+  position: relative;
 }
-body {
-  background: var(--background-page);
-  font-family: var(--font-family);
-  font-size: var(--font-size);
-  color: var(--color-font);
-}
-p.warning {
-  text-align: center;
-  line-height: 2;
-  margin: 0 auto;
-  font-size: 14px;
-  max-width: var(--container-max-width);
-  color: #fff;
-}
-p.warning a {
-  background: #45ba04;
-  color: #fff;
-  padding: 0.2rem 0.7rem;
-  border-radius: 3px;
-  white-space: nowrap;
-  text-decoration: none;
-}
-p.warning a.more:hover {
-  background: #3bacff;
-}
-.container1 {
-  background: var(--background-container);
-  box-shadow: 0 0 16px rgba(0, 0, 0, 1);
-  border-radius: var(--border-radius);
-  margin: 2em auto;
-  max-width: var(--container-max-width);
-  display: flex;
-  flex-flow: wrap;
-  justify-content: space-between; /* Horizontal spacing between the entries. */
-  padding: var(--gap) var(--gap) calc(var(--gap) / 2) var(--gap); /* The external spacing of the container. */
-  overflow: hidden; /* Prevents .corner::before to be visible outside the margins of the container. */
-}
-.entry {
-  width: calc(
-    (100% / var(--columns)) - calc(var(--gap) / 2)
-  ); /* Column width must take into account the desired gap. */
-  margin-bottom: calc(
-    var(--gap) / 2
-  ); /* Vertical spacing between the entries. */
-  position: relative; /* This is required, to contain .corner::before within the margins of it's parent. */
-}
-.entry-content {
-  display: grid;
-  place-items: center;
-  min-height: clamp(
-    1em,
-    calc(100vw / var(--columns)),
-    calc(var(--container-max-width) / var(--columns))
-  );
-  background: var(--background-box);
-  transition: all var(--transition-duration) var(--transition-style);
-  pointer-events: none; /* When hovering over an entry, ignore this element, even if its on the foreground. */
-  z-index: 1; /* The content div should have a higher z-index than the .corner::before. */
-  position: relative; /* z-index would have no effect without a specific position. */
-}
-.entry:hover .entry-content {
-  background: var(--background-container);
-  color: var(--color-line);
-}
-.corner-container1 {
-  /* The corner container should cover the entire entry. */
-  width: 100%;
-  height: 100%;
+
+.col-lg-6 figure::before {
+  position: absolute;
   top: 0;
-  left: 0;
-  position: absolute;
-}
-.corner {
-  /* Each corner should cover 1/4 of an entry. */
-  position: absolute;
-  width: 50%;
-  height: 50%;
-}
-.corner::before {
-  /* The cross shape is just a big box positioned behind the entries. */
-  content: "";
+  left: -75%;
+  z-index: 2;
   display: block;
+  content: "";
+  width: 50%;
+  height: 100%;
+  background: -webkit-linear-gradient(
+    left,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.3) 100%
+  );
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.3) 100%
+  );
+  -webkit-transform: skewX(-25deg);
+  transform: skewX(-25deg);
+}
+.col-lg-6 figure:hover::before {
+  -webkit-animation: shine 2s;
+  animation: shine 2s;
+}
+@-webkit-keyframes shine {
+  100% {
+    left: 100%;
+  }
+}
+@keyframes shine {
+  100% {
+    left: 100%;
+  }
+}
+
+/* ЦВЕТНЫЕ КАРТОЧКИ */
+
+.main-container {
+  padding: 30px;
+}
+
+/* CARDS */
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.cardz {
+  margin: 20px;
+  padding: 20px;
+  width: 500px;
+  min-height: 200px;
+  display: grid;
+  grid-template-rows: 20px 50px 1fr 50px;
+  border-radius: 10px;
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
+  transition: all 0.2s;
+}
+
+.card:hover {
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
+  transform: scale(1.01);
+}
+
+.card__link,
+.card__exit,
+.card__icon {
+  position: relative;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.card__link::after {
   position: absolute;
-  width: 200%;
-  height: 200%;
-  opacity: 0;
-  transition: opacity var(--transition-duration) var(--transition-style);
-  background: radial-gradient(
-    var(--color-line) 0,
-    transparent 70%
-  ); /* Radial gradient smoothens the shape's edges. */
-  pointer-events: none; /* This is needed to prevent hovering on the ::before element instead of its container span. */
-}
-.corner:hover::before {
-  opacity: 1;
-}
-/* Position the corners and their respective shapes. */
-.corner:nth-child(1) {
+  top: 25px;
   left: 0;
-  top: 0;
+  content: "";
+  width: 0%;
+  height: 3px;
+  background-color: rgba(255, 255, 255, 0.6);
+  transition: all 0.5s;
 }
-.corner:nth-child(1)::before {
-  left: -100%;
-  top: -100%;
+
+.card__link:hover::after {
+  width: 100%;
 }
-.corner:nth-child(2) {
-  right: 0;
-  top: 0;
+
+.card__exit {
+  grid-row: 1/2;
+  justify-self: end;
 }
-.corner:nth-child(2)::before {
-  right: -100%;
-  top: -100%;
+
+.card__icon {
+  grid-row: 2/3;
+  font-size: 30px;
 }
-.corner:nth-child(3) {
-  left: 0;
-  bottom: 0;
+
+.card__title {
+  grid-row: 3/4;
+  font-weight: 400;
+  color: #ffffff;
 }
-.corner:nth-child(3)::before {
-  left: -100%;
-  bottom: -100%;
+
+.card__apply {
+  grid-row: 4/5;
+  align-self: center;
 }
-.corner:nth-child(4) {
-  right: 0;
-  bottom: 0;
+
+/* CARD BACKGROUNDS */
+
+.card-1 {
+  background: radial-gradient(#1fe4f5, #3fbafe);
 }
-.corner:nth-child(4)::before {
-  right: -100%;
-  bottom: -100%;
+
+.card-2 {
+  background: radial-gradient(#fbc1cc, #fa99b2);
+}
+
+.card-3 {
+  background: radial-gradient(#76b2fe, #b69efe);
+}
+
+.card-4 {
+  background: radial-gradient(#60efbc, #58d5c9);
+}
+
+.card-5 {
+  background: radial-gradient(#f588d8, #c0a3e5);
+}
+
+/* RESPONSIVE */
+
+@media (max-width: 1600px) {
+  .cards {
+    justify-content: center;
+  }
 }
