--- a/styles.css
+++ b/styles.css
@@ -383,7 +383,11 @@ SERVICES PAGE SERVICES PAGE SERVICES PAGE SERVICES PAGE SERVICES PAGE SERVICES P
 }
 
 .card-5 {
-  background: radial-gradient(#76b2fe, #b69efe);
+  background: radial-gradient(#1fe4f5, #3fbafe);
+}
+
+.card-6 {
+  background: radial-gradient(#1fe4f5, #3fbafe);
 }
 
 /* RESPONSIVE */
